<resources>
    <string name="app_name">Day06_app01</string>
    <string name="input_account">请输入账号</string>
    <string name="input_pwd">请输入密码</string>
    <string name="login">登录</string>
    <string name="forget_pwd">忘记密码?</string>
    <string name="savepwd">记住密码</string>
    <string name="register">注册</string>
    <string name="phone">手机号</string>
    <string name="identityin_code">验证码</string>
    <string name="pwd">密码</string>
    <string name="send">发送验证码</string>
    <string name="account">账号</string>
    <string name="username">用户名</string>
</resources>
